manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twilight
  labels:
    app.kubernetes.io/name: twilight
spec:
  selector:
    app.kubernetes.io/name: twilight
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
